feat: Добавление фильтрации в классах (кость хитов)